# k8s-yaml-fmt

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  k8s_yaml_fmt.py  pyproject.toml  test_k8s_yaml_fmt.py
.github/workflows/: ci.yaml  release.yaml
test/: docker-compose.yaml  github-workflow.yaml  secret.sops.yaml  unformatted.yaml
