[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k8s-yaml-fmt"
version = "0.1.0"
description = "Kubernetes YAML formatter with idiomatic key ordering"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "metawave"}
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
]
keywords = ["kubernetes", "yaml", "formatter", "k8s", "pre-commit"]
dependencies = [
    "ruamel.yaml>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
k8s-yaml-fmt = "k8s_yaml_fmt:main"

[project.urls]
Homepage = "https://github.com/metawave/k8s-yaml-fmt"
Repository = "https://github.com/metawave/k8s-yaml-fmt"

[tool.setuptools]
py-modules = ["k8s_yaml_fmt"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
